--- a/style.css
+++ b/style.css
@@ -2,6 +2,180 @@
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 </style>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap');
+</style>
 font-family: 'Bebas Neue', cursive;
 font-family: 'Roboto', sans-serif;
+
+ body{
+    font-family: 'Roboto', sans-serif;
+    margin-left: 30px;
+    margin-right: 30px;
+
+ }
+ span {
+    color: #f56260;
+}
+h1{font-family: 'Oswald', sans-serif;font-size: 31px;color: dimgray;}
+img{
+    max-width: 50%;
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* display: flex; */
+    /* padding: 5px 56px; */
+}
+a{
+    background-image: linear-gradient(45deg, light);
+    background-image: linear-gradient(45deg, lightsalmon , tomato);
+    text-decoration: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 3px;
+    /* margin-top: 19px; */
+}
+header{
+    margin-bottom: 50px;
+}
+header ul{
+    display: flex;
+    /* float: left; */
+    /* width: 900px; */
+    justify-content: flex-end;
+    padding-left: 31px;
+    margin-right: 50px;
+}
+header ul li{
+    list-style: none;
+    /* display: flex; */
+    /* float: left; */
+    /* justify-content: flex-end; */
+    padding-left: 66px;
+    text-transform: capitalize;
+}
+
+
+
+.first-section{
+    display: flex;
+    margin-bottom: 100px;
+}
+.half-width{
+    width: 50%;
+}
+.first-section  a{}
+.first-section img{
+    max-width: 50%;
+}
+.first-section img p{}
+.first-section h1 span{}
+
+.second-section{
+    display: flex;
+}
+.second-section img{}
+.second-section h2{
+    color: dimgray;
+}
+.second-section a{}
+.second-section p{}
+.second-section h1 span{}
+
+.third-section{
+    
+    margin: 100px 109px;
+    
+}
+.third-section h1{
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 30px;
+}
+.third-section h1 span{}
+
+.project-section{
+    display: flex;
+    justify-content: space-between;
+}
+.project{
+    width: 30%;
+    border: 10px solid #f3eaea8c;
+    border-radius: 20px;
+    align-items: center;
+}
+.project img{
+    max-width: 88%;
+    padding: 2px 14px;
+}
+.project h4{}
+.project p{}
+
+
+.chat-section{
+    /* width: 940px; */
+    /* margin: 0px 100px; */
+    /* margin: 0px 300px; */
+    background-image: url(shapes/chat.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 237px;
+    width: 600px;
+    margin: auto;
+    margin-bottom: 100px;
+    /* align-items: center; */
+    background-size: cover;
+    padding:  15px 50px;
+    height: 140px;
+}
+.chat-section ul{
+    list-style: none;
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    width: 9oopx;
+    /* margin: 0px 300px; */
+}
+.chat-section ul li{}
+.chat-section ul li a{}
+.chat-section h1{
+    text-transform: uppercase;
+    color: white;
+}
+
+
+
+footer{
+}
+footer h4{
+    text-align: center;
+    font-size: 22px;
+    color: dimgray;
+}
+footer h2{
+    text-align: center;
+}
+footer ul{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    /* text-align: center; */
+    justify-content: center;
+}
+footer ul li{}
+footer ul li img{
+    max-width: 40%;
+}
+
+p {
+    color: dimgray;
+    margin-bottom: 39px;
+}
+
+body {
+    font-family: 'Roboto', sans-serif;
+    margin: 20px 100px;
+}
+
+
 
